--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Ignore arquivos de variáveis de ambiente e configurações sensíveis
+.env
+apikeys.py
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -6,7 +10,17 @@ __pycache__/
 # C extensions
 *.so
 
-# Distribution / packaging
+# Arquivos de log
+*.log
+
+# Arquivos de banco de dados SQLite
+*.db
+
+# Ambientes virtuais
+bot-env/
+venv/
+
+# Distribuição / empacotamento
 .Python
 build/
 develop-eggs/
@@ -32,11 +46,11 @@ MANIFEST
 *.manifest
 *.spec
 
-# Installer logs
+# Logs de instalação
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
+# Relatórios de teste / cobertura
 htmlcov/
 .tox/
 .nox/
@@ -51,12 +65,11 @@ coverage.xml
 .pytest_cache/
 cover/
 
-# Translations
+# Traduções
 *.mo
 *.pot
 
 # Django stuff:
-*.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
@@ -83,30 +96,15 @@ profile_default/
 ipython_config.py
 
 # pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+.python-version
 
 # pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
 #Pipfile.lock
 
 # poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
 #poetry.lock
 
 # pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/latest/usage/project/#working-with-version-control
 .pdm.toml
 .pdm-python
 .pdm-build/
@@ -140,12 +138,12 @@ venv.bak/
 # mkdocs documentation
 /site
 
-# mypy
+# Dados do mypy
 .mypy_cache/
 .dmypy.json
 dmypy.json
 
-# Pyre type checker
+# Dados do Pyre type checker
 .pyre/
 
 # pytype static type analyzer
@@ -155,8 +153,4 @@ dmypy.json
 cython_debug/
 
 # PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+# .idea/
